# MyToken_offchain

./: Cargo.toml  ImageToken_sol_MyToken.json  encoded_image.json
UserInfo/Image-01/: wukong_watermark.npy
src/: DataBase.rs  Error.rs  lib.rs  main.rs
src/IPFSImageStorage/: mod.rs  storeImage.rs
src/IdentityAuthentication/: Jwt.rs  middleware.rs  mod.rs
src/Router/: Image_routers.rs  User_routers.rs  mod.rs  onchain_router.rs  routers.rs
src/Transaction/: ContractMethod.rs  ImageData.rs  mod.rs  sendTx.rs
src/UserInfo/: Generate_address.rs  Login.rs  mod.rs
src/WatermarkService/: mod.rs  watermarkservice.rs
