[package]
name = "BlockchainImageService"
version = "0.1.0"
edition = "2021"

[features]
#default = ["tls-rustls"]
#tls-rustls=["rbdc/tls-rustls"]
#tls-native-tls=["rbdc/tls-native-tls"]
#![feature(lazy_cell)]


[dependencies]
pyo3 = { version = "0.23.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
fast_log = "1.7.6"
serde_json = "1.0"
ethers = "2.0.14"
alloy = { version = "0.7.0", features = ["full"] }
eyre = "0.6.12"
reqwest = { version = "0.12.9", features = ["multipart", "json"] }
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
base64 = "0.22.1"
image = "0.25.5"
imageproc = "0.25.0"
rusttype = "0.9.3"

rbs = { version = "4.5.24"}
rbatis = { version = "4.5.41" }
#rbatis-core = "3.1.11"
rbdc-sqlite = { version = "4.5.6" }
rbdc-mysql={version="4.5.13", default-features = false, features = ["tls-rustls"]}
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
rocket = { version = "0.5.1", features = ["json"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
actix-web = "4"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.94"

